--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=JBDL71-Spring
+logging.level.org.root=info
+logging.file.name=test.log
+spring.datasource.url=jdbc:mysql://localhost:3306/studentDetails
+spring.datasource.username=root
+spring.datasource.password=root
